# Star-Trek-Retro-Remake

./: .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_TESTING_REPORT_v0.0.11.md  CONTRIBUTING.md  DESIGN.md  GRID_INTEGRATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  ISOMETRIC_GRID_SUMMARY.md  LICENSE  MERGE_PREP_REPORT.md  Makefile  QT_PYGAME_INTEGRATION_README.md  QUICKSTART.md  README.md  SECURITY.md  Star-Trek-Retro-Remake.code-workspace  TESTING_REPORT_v0.0.11.md  TESTING_SUMMARY_v0.0.18.md  copilot-instructions.md  pyproject.toml  setup-branch-protection.sh  test_report_comprehensive.txt
.agents/: branch_protection.py  memory.instruction.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/chatmodes/: claudette.condensed.chatmode.md  claudette.debug.chatmode.md  claudette.researcher.chatmode.md
.github/instructions/: desktop-application.instructions.md  game.instructions.md
.github/prompts/: arrange_code.prompt.md  cleanup.prompt.md  code-review.prompt.md  create-ui.prompt.md  debug.prompt.md  documentation.prompt.md  explain.prompt.md  merge-to-main.prompt.md  merge_prep.prompt.md  merge_testing_to_main.prompt.md  refactor.prompt.md  test.prompt.md  venv-init.prompt.md  version-update.prompt.md
.github/scripts/: doc_drift.py
.github/workflows/: doc-drift.yml  enable-automerge.yml  test.yml
.serena/: project.yml
.serena/memories/: project_overview.md  suggested_commands.md  task_completion.md
GDD/: DESIGN.md
QT Designer Files/: main_window.ui  main_window_ui.py
QT Designer Files/StarTrekRetroRemake/: StarTrekRetroRemake.qmlproject  StarTrekRetroRemake.qmlproject.qtds
QT Designer Files/StarTrekRetroRemake/StarTrekRetroRemake/: Constants.qml  qmldir
QT Designer Files/StarTrekRetroRemake/StarTrekRetroRemake/designer/: plugin.metainfo
QT Designer Files/StarTrekRetroRemake/StarTrekRetroRemakeContent/: App.qml  Screen01.ui.qml
STRR/: .coveragerc  README_DOCS.md  demo_isometric_grid.py  demo_isometric_grid_doc.md  demo_qt_pygame_integration.py  demo_qt_pygame_integration_doc.md  main.py  main_doc.md
STRR/assets/data/: README.md  mission_templates.toml
STRR/config/: game_settings.toml  key_bindings.toml
STRR/docs/: CHANGELOG.md  PROJECT-DOC.md
STRR/src/: __init__.py
STRR/src/engine/: compat.py  compat_doc.md  config_loader.py  config_loader_doc.md  config_manager.py  config_manager_doc.md  isometric_grid.py  isometric_grid_doc.md  paths.py  paths_doc.md
STRR/src/game/: PYSIDE6_PYGAME_INTEGRATION.md  __init__.py  application.py  application_doc.md  commands.py  commands_doc.md  controller.py  controller_doc.md  events.py  events_doc.md  exceptions.py  exceptions_doc.md  model.py  model_doc.md  view.py  view_doc.md
STRR/src/game/ai/: __init__.py  ship_ai.py  ship_ai_doc.md
STRR/src/game/components/: __init__.py  mission_manager.py  mission_manager_doc.md  ship_systems.py  ship_systems_doc.md
STRR/src/game/entities/: __init__.py  base.py  base_doc.md  starship.py  starship_doc.md
STRR/src/game/maps/: __init__.py  galaxy.py  galaxy_doc.md  sector.py  sector_doc.md
STRR/src/game/states/: __init__.py  sector_state.py  sector_state_doc.md  state_machine.py  state_machine_doc.md
STRR/src/game/ui/: mission_dialogs.py  mission_dialogs_doc.md  settings_dialog.py
STRR/src/ui/: QT_DESIGNER_QUICKREF.md  README.md  __init__.py
STRR/src/ui/compiled/: __init__.py
STRR/src/ui/designer/: LAYOUT_REFERENCE.md  main_window.ui  main_window_complete.ui  main_window_complete_ui.py  main_window_ui.py
STRR/tests/: conftest.py  test_application.py  test_commands.py  test_compat.py  test_config_loader.py  test_config_manager.py  test_controller.py  test_entities.py  test_events.py  test_game_model.py  test_isometric_grid.py  test_maps.py  test_mission_dialogs.py  test_mission_manager.py  test_paths.py  test_resource_management.py  test_sector_state.py  test_settings_dialog.py  test_ship_systems.py  test_state_machine.py
backup/json_config_files/: game_data.json
docs/: ARCHITECTURE.md  BRANCH_PROTECTION.md  CALL_CHAIN_FLOWCHART.md  CHANGELOG.md  CODE_ANALYSIS_REFACTORING_RECOMMENDATIONS.md  DESIGN.md  DOCUMENTATION_STANDARDS.md  PROJECT-DOC.md  PYTHON_FILE_REFERENCE.md  QT6_COMPONENTS.md  QT6_MODULE_MAPPING.md  QT_DESIGNER_INTEGRATION_SUMMARY.md  QT_DESIGNER_WORKFLOW.md  ROADMAP.md  VERSIONING_GUIDELINES.md
docs/plans/: 2026-02-19-full-reset-design.md  2026-02-19-full-reset-plan.md  2026-02-19-python-code-quality-fixes.md
scripts/: README.md  compile_ui.py  dev_setup.sh  migrate_json_to_toml.py  run_tests.sh  verify_qt_components.py
star_trek_retro_remake/: main.py
star_trek_retro_remake/assets/data/sectors/: sol_system.json  sol_system.toml
star_trek_retro_remake/assets/graphics/: README.md
star_trek_retro_remake/config/: game_data.toml  game_settings.json  game_settings.toml  key_bindings.json
star_trek_retro_remake/docs/: CHANGELOG.md  PROJECT-DOC.md
star_trek_retro_remake/src/: __init__.py
star_trek_retro_remake/src/engine/: config_manager.py
star_trek_retro_remake/src/game/: __init__.py  application.py  commands.py  controller.py  events.py  exceptions.py  model.py  view.py
star_trek_retro_remake/src/game/components/: __init__.py  ship_systems.py
star_trek_retro_remake/src/game/entities/: __init__.py  base.py  starship.py
star_trek_retro_remake/src/game/maps/: __init__.py  galaxy.py  sector.py
star_trek_retro_remake/src/game/states/: __init__.py  state_machine.py
star_trek_retro_remake/tests/: conftest.py  test_entities.py  test_game_model.py
