[project]
name = "star-trek-retro-remake"
version = "0.0.32"
description = "A turn-based, grid-based Star Trek strategy game inspired by classic retro games"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
    {name = "Star Trek Retro Remake Development Team", email = "development@star-trek-retro-remake.org"}
]
keywords = ["game", "star-trek", "strategy", "turn-based", "retro"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "pygame-ce>=2.5.0",
    "PySide6>=6.10.0",
    "PySide6-Essentials>=6.10.0",
    "PySide6-Addons>=6.10.0",
    "shiboken6>=6.10.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
    "pre-commit>=3.5.0",
]
qt = [
    "PySide6-Essentials>=6.10.0",
    "PySide6-Addons>=6.10.0",
    "shiboken6>=6.10.0",
]

[project.urls]
Homepage = "https://github.com/L3Digital-Net/Star-Trek-Retro-Remake"
Repository = "https://github.com/L3Digital-Net/Star-Trek-Retro-Remake"
Issues = "https://github.com/L3Digital-Net/Star-Trek-Retro-Remake/issues"
Documentation = "https://github.com/L3Digital-Net/Star-Trek-Retro-Remake/blob/main/README.md"

[project.scripts]
star-trek-retro-remake = "STRR.main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["STRR"]

[tool.setuptools.package-data]
STRR = [
    "config/*.toml",
    "assets/**/*",
    "docs/*.md",
]

[tool.pytest.ini_options]
testpaths = ["STRR/tests"]
pythonpath = ["STRR"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gui: tests requiring a display server (Xvfb or real display)",
]

[tool.coverage.run]
source = ["STRR/src"]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]         # Allow unused imports in __init__.py
# Test files use sys.path manipulation and importorskip before imports (E402),
# and often create objects for side-effects without storing the result (F841).
"STRR/tests/**" = ["E402", "F841"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pygame_ce.*",
    "PySide6.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Auto-generated Qt Designer files — not hand-edited, always regenerated from .ui files.
# game.view uses Qt 6.x deprecated flat enum aliases (Qt.AlignCenter, Qt.Key_Left, etc.)
# that are valid at runtime but absent from the current PySide6 mypy stubs.
module = [
    "src.ui.compiled.*",
    "src.ui.designer.*",
    "src.game.view",
]
ignore_errors = true

